Fix spacing and set initial layout

--- a/webpresence/css/styles.css
+++ b/webpresence/css/styles.css
@@ -234,3 +234,7 @@ input, textarea {
     margin-top: 10px; 
     display: block;
 } 
+.contacticon {
+    width:50px;
+    float: left;
+}
